jasn/examples/invalid/uppercase_inf.jasn
/* Uppercase Inf (should be lowercase) */
{
  bad: Inf
}
